# TabeltopMagnate

./: .gitignore  README.md  digest (3).txt  digest.txt  main.py  objectbox-model.json  pyproject.toml  test_mcp.py
data/: README.md  ner_database.json  podzemelja-i-pjosiki-act-rules.md  podzemelja_chunks.cleaned.json  podzemelja_chunks.jsonl  terminology_database.json  terminology_flat.json  terminology_flat_ru.json  terms_merged.json  terms_merged_ru.json
data/iki/: chunks.json  iki.md  terms.json
db/: data.mdb  lock.mdb
db/objectbox/: data.mdb  lock.mdb
notebooks/: create_rag_database.ipynb  objectbox-model.json
notebooks/objectbox/: data.mdb  lock.mdb
prompts/: clarification_expert.md  expert1.md  expert2.md  expert3.md  security.md  summary.md  task_classifir.md  task_splitter.md
src/tabletopmagnat/application/: application.py
src/tabletopmagnat/config/: config.py  langfuse.py  mcp_tools.py  models.py  openai_config.py
src/tabletopmagnat/constants/: general.py
src/tabletopmagnat/node/: abstract_node.py  assistant_node.py  chonkie_node.py  debug_node.py  docling_node.py  echo_node.py  empty_user_node.py  from_summary_to_main_node.py  llm_node.py  mcp_tool_node.py  security_llm_node.py  summary_node.py  task_classifier.py  task_classifier_node.py  task_splitter_node.py  tool_node.py  universal_llm_node.py
src/tabletopmagnat/service/: llm_service.py
src/tabletopmagnat/services/: llm_service.py  openai_service.py
src/tabletopmagnat/state/: private_state.py
src/tabletopmagnat/structured_output/: task_classifier.py
(+8 files in other folders)
