[project]
name = "tabletopmagnat"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Artem Durynin", email = "artem.durynin@rafds.com" }
]
dependencies = [
    "pocketflow>=0.0.3",
    "openai>=2.6.0",
    "pydantic-settings>=2.11.0",
    "langfuse>=3.8.1",
    "fastapi>=0.120.0",
    "uvicorn>=0.38.0",
    "blacksheep>=2.4.3",
    "blacksheep-cli>=0.0.5",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tabletopmagnat"]
